<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/bg"
    android:minHeight="150sp"
    android:minWidth="300sp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/p_one_name"
        android:textColor="#000"
        android:textSize="17sp"/>


    <EditText
        android:id="@+id/EditText01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:minWidth="200sp"
        android:layout_gravity="center_horizontal"
        android:singleLine="true"
        android:hint="@string/hint"/>

    <Button
        android:id="@+id/Button01"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="100dp"
        android:text="@string/Submit"/>

</LinearLayout>
