<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="20sp"
        android:paddingLeft="100dp"
        android:paddingStart="100dp"
        android:paddingEnd="100dp"
        android:paddingTop="10sp"
        android:text="@string/name"
        android:textColor="#000"
        android:textSize="20sp" />

    <ImageView
        android:contentDescription="@string/descrip"
        android:id="@+id/ImageView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:src="@drawable/anim1"/>

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20sp"
        android:text="@string/over"
        android:textColor="#000"/>
</LinearLayout>